# imgproc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  bit_polyfill.h  bmp.h  colors.h  image.h  image_test.cpp  mandelbrot.cpp  test.sh  write_bmp.cpp
scripts/: test.sh
src/: CMakeLists.txt  ansi_color.cpp  ansi_color.h  ansi_color_main.cpp  ansi_color_test.cpp  assert.h  base64.cpp  base64.h  base64_test.cpp  bmp.cpp  bmp.h  bmp_cat.cpp  cmdline.cpp  cmdline.h  cmdline_test.cpp  color_conversion.h  colors.h  dimension.h  image.h  image_coordinate.h  image_iterator.h  image_iterator_test.cpp  image_test.cpp  mandelbrot.cpp  mirror_image.cpp  pixel.h  ppm.cpp  ppm.h  read_bmp_test.cpp  terminal.cpp  terminal.h  test_lib.h  write_bmp.cpp
